for loop to stream